[project]
name = "nographs"
version = "3.4.2"
authors = [
  { name="Dr. Helmut Melcher", email="HeWeMel@web.de" },
]
description = """\
    Graph analysis – the lazy (evaluation) way: Analysis on the fly, \
    for graphs, that are computed and/or adapted on the fly.\
    """
readme = "README.rst"
requires-python = ">=3.9"
keywords = [
    "graph", "network", "search", "traverse", "analysis", "infinite", "lazy",
    "shortest", "distance", "depth", "DFS", "breadth", "BFS", "Dijkstra",
    "topological", "spanning", "MST", "TSP"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hewemel/nographs"
Documentation = "https://nographs.readthedocs.io/"
Repository = "https://github.com/hewemel/nographs.git"
Issues = "https://github.com/hewemel/nographs/issues"
Changelog = "https://nographs.readthedocs.io/en/latest/changelog.html"

[tool.coverage.report]
exclude_lines =["pragma: no cover", "@overload"]

[tool.mypy]
# Specified the target platform details in config, so the developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.9"
mypy_path = "src/nographs tests"
strict = true
disallow_untyped_defs = true
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel ~=0.37.1",
    # "cython",  # Only needed if Cython-compiled binary wheel is demanded
    # "mypy[mypyc]",  # Only needed if MyPyC-compiled binary wheel is demanded
]
build-backend = "setuptools.build_meta"
